2009-10-01  Alan Modra  <amodra@bigpond.net.au>

	* addr2line.c (slurp_symtab): Don't use bfd_read_minisymbols.

2009-09-29  Nick Clifton  <nickc@redhat.com>

	* doc/binutils.texi (c++filt): Remove spurious description of
	nonexistent --java command line switch for cxxfilt.

2009-09-29  DJ Delorie  <dj@redhat.com>

	* readelf.c: Add support for RX target.
	* MAINTAINERS: Add DJ and NickC as maintainers for RX.

2009-09-28  Alan Modra  <amodra@bigpond.net.au>

	* configure.in: Don't invoke configure.tgt on $enable_targets.
	* configure: Regenerate.

2009-09-28  Nick Clifton  <nickc@redhat.com>

	PR 10478
	* readelf.c (get_elf_section_flags): Allow SHN_BEFORE and
	SHN_AFTER section link values in x86 binaries.
	(process_section_headers): Likewise.

2009-09-25  Dimitry Gorbachev  <d.g.gorbachev@gmail.com>

	PR 10656
	* readelf.c: Remove duplicate declaration of variable do_wide.
	* dwarf.h: Add export of do_wide.

2009-09-24  Cary Coutant  <ccoutant@google.com>

	* dwarf.c (get_TAG_name): Add missing DWARF-3 and new DWARF-4 tags.
	(get_FORM_name): Add new DWARF-4 forms.
	(read_and_display_attr_value): Add DW_FORM_ref_sig8, DW_LANG_Python.
	(get_AT_name): Add new DWARF-4 and GNU-specific attributes.
	(process_debug_info): Add do_types parameter; change all callers.
	Add support for .debug_types sections.
	(display_debug_types): New function.
	(debug_displays): Add .debug_types section.
	* readelf.c (process_section_headers): Add .debug_types section.
	(display_debug_section): Simplify call to streq.

2009-09-25  Alan Modra  <amodra@bigpond.net.au>

	* readelf.c (print_dynamic_symbol): Format entries as for
	normal symbol table.
	(process_symbol_table): Use -7s format string for visibility.

2009-09-22  Richard Sandiford  <rdsandiford@googlemail.com>

	* objdump.c (disassemble_section): Use bfd_get_arch_size
	instead of assuming that the address size is 32 bits.

2009-09-21  Alan Modra  <amodra@bigpond.net.au>

	* readelf.c (get_ppc_dynamic_type): Add TLSOPT.